css/site.css
body {
	background-image: url('/images/background.png');
	background-color: #1f1f21;
	width: 100%;
	margin: 0;
	padding-top: 15px;
	font: 16px Trebuchet, sans-serif;
	color: #ddd;
}
div.width {
	width: 700px;
	margin: 0 auto;
}
img {
	border: 0px;
}
ul {
	margin: 0;
	padding: 0;
	list-style-type: none;
}
ul.normal {
	margin-left: 15px;
	list-style-type: circle;
}

em{
	font-weight: bold;
	font-style: italic;
}
h1 {
	color: #ffad33;
	margin: 0px 0px 0px 0px;
	padding: 0px;
	font-size: 25px;
}
h2 {
	margin: 0px;
	padding: 0px;
	font-size: 20px;
}
a {
	color: #8a8ae5;
	text-decoration: none
}
a:hover {
	color: #e55c00;
	color: #bfb384;
	color: #bfa384;
	color: #d9860b;
	color: #ff8000;
	text-decoration: underline;
}

/* Site Header */
div.header {
	z-index: 3;
	position: relative;
	overflow: hidden;
	margin-bottom: 20px;
}
div.header span.quote {
	display: none;
	position: absolute;
	top: 43px;
	left: 102px;
	font-size: 14px;
	font-style: italic;
	font-weight: bold;
	color: #aaa;
}
img.sitelogo {
	z-index: 6;
}
span.quote span {
	font-size: 11px;
	color: #3f3f43
}
ul.navlinks {
	position: absolute;
	background-color: #1f1f21;
	z-index: -1;
	padding: 7px 7px 7px 25px;
	top: 5px;
	left: 80px;
	list-style-type: none;
	
	-moz-border-radius: 10px;
	-webkit-border-radius: 10px;
	border-radius: 10px;

	-moz-box-shadow: 0px 0px 10px #111;
	-webkit-box-shadow: 0px 0px 10px #111;
	box-shadow: 0px 0px 10px #111;
}
ul.navlinks li {
	float: left;
	margin-right: 20px;
	font-weight: bold;
}
ul.navlinks li.cur a {
	color: #ff8000;
}
/* End Site Header */

/* Home Page */
#hp_images {
	overflow: hidden;
	margin-bottom: 40px;
}
#hp_images li {
	float: left;
	width: 87px;
	height: 87px;
}
#hp_images img {
	margin-top: 5px;
	border: 1px solid #000;;
	margin-left: 7px;
	-moz-box-shadow: 0px 0px 0px #000;
	-webkit-box-shadow: 0px 0px 0px #000;
	box-shadow: 0px 0px 0px #000;
}
#hp_images img:hover {
	border: 1px solid #444;
	margin-left: 7px;
	-moz-box-shadow: 0px 0px 5px #777;
	-webkit-box-shadow: 0px 0px 5px #777;
	box-shadow: 0px 0px 5px #777;
}
/* End Home Page */

div.pagecontent img {
	display: block;
	margin: 0 auto;
	border: 2px solid #000;
	-moz-box-shadow: 0px 0px 10px #000;
	-webkit-box-shadow: 0px 0px 10px #000;
	box-shadow: 0px 0px 10px #000;
}

/* Trips */
h2.year {
	font-weight: bold;
	font-size: 22px;
	margin-top: 15px;
	color: #888;
}
ul.triplist {
	margin-left: 23px;
	font-size: 20px;
}
ul.triplist li {
	margin-top: 10px;
	margin-bottom: 15px;
	overflow: hidden;
}
ul.triplist li a {
	display: block;
}
ul.triplist li a img {
	float: left;
}
ul.triplist li a div {
	float: left;
	margin-top: 25px; 
	margin-left: 20px;
}

ul.entrylist {
	margin-left: 18px;
}
ul.entrylist li {
	margin: 10px 0px 0px 0px;
	list-style-type: circle;
}
/* End Trips */

/* Post */
ul.posts li {
	font-size: 16px;
	margin-bottom: 18px;
}
ul.posts li span{
	font-size: 12px;
	font-weight: bold;
	color: #777;
}
ul.posts li a {
	color: #ffad33;
}
ul.posts div.categories {
	font-size: 10px;
	font-weight: bold;
	margin-left: 104px;
}
ul.posts div.categories a {
	color: #8a8ae5;
}
ul.posts a.map {
	padding: 0 11px;
	background: url('/images/map_icon.png') no-repeat;
	background-position: 3px 0px;
}

div.post {
	clear: both;
}
div.post h2 {
	font-size: 22px;
	color: #ffad33;
}
div.post h2 a {
	margin: 0px;
	padding: 0px;
	font-size: 22px;
	color: #8ae5b8;
	color: #2db259;
	color: #2a8c2a;
	color: #c1e58a;
	color: #E0BD11;
	color: #edc600;
	color: #e59317;
	color: #ffad33;
}
div.title_list {
	margin-bottom: 50px;
}
div.title_list h2 a{
	font-size: 17px;
}
div.post div.content {
	padding-top: 3px;
	clear: both;
}
div.post div.content:first-letter {
	font-weight: bold;
	letter-spacing: 1px;
	font-size: 24px;
}
div.post div.data {
	width: 100%;
	font-size: 12px;
	margin-bottom: 2px;
}
div.post div.data div.categories {
	margin-left: 10px;
	float: left;
	font-weight: bold;
}
div.post div.data div.date {
	font-weight: bold;
	float: left;
}
div.post div.data div.author {
	float: left;
	margin-left: 2px;
	font-weight: bold;
	color: #888;
}
div.post div.data div.map {
	color: #F25223;
	color: #ff7519;
	cursor: pointer;
	width: 22px;
	height: 20px;
	float: left;
	margin-top: 0px;
	margin-left: 8px;
	background: url('/images/map_icon.png') no-repeat;
}
div.post div.data div.bw {
	background: url('/images/earth-smallbw.png') no-repeat;
}
div.post div.data div.bw:hover {
	background: url('/images/earth-small.png') no-repeat;
}
div.day_map_wrap {
	clear: both;
	overflow: hidden;
	padding-top: 10px;
	color: #222;
}
div.day_map {
	clear: both;
	width: 100%;
	height: 440px;
}
div.day_map img {
	-moz-box-shadow: 0px 0px 0px #000;
	-webkit-box-shadow: 0px 0px 0px #000;
	box-shadow: 0px 0px 0px #000;
}
div.post object {
	display: block;
	margin: 0 auto;
}
div.post p {
	margin: 20px 0px;
}
/* End Post */

/* Pagination */
div.pagination {
	width: 100%;
	margin-top: 50px;
	margin-left: auto;
	margin-right: auto;
	margin-bottom: -30px;
	font-size: 14px;
	font-weight: bold;
	color: #ff7500;
	overflow: hidden;
}
div.pagination a {
	color: #777;
}
div.pagination span.prev {
	float: left;
}
div.pagination span.next {
	float: right;
}
/* End Pagination */

/* Footer */
div.footer {
	clear: both;
	text-align: center;
	font-size: 11px;
	border-top: 1px dashed #555;
	padding-top: 10px;
	margin-top: 50px;
	padding-bottom: 50px;
	color: #777;
}
div.footer a {
	color: #888;
}
/* End Footer */

/* World Map */
body.map {
	background: #1f1f21;
	margin: 0px;
	padding: 0px;
	width: 100%;
}
body.map ul.navlinks {
	position: absolute;
	top: 8px;
	left: 80px;
	margin: 0px;
	padding: 7px;
	padding-left: 25px;
	overflow: hidden;
	background-color: #1f1f21;
	float: left;
	z-index: -1;
}
body.map div.header {
	top: 5px;
	margin: 0px;
	overflow: hidden;
	width: 333px;
}
#world_map_canvas{
	position: absolute;
	top: 0px;
	left: 0px;
	width: 100%;
	height: 100%;
	z-index: -1;
	color: #222;
}
/* End World Map */
/* Google Maps Styles */
div.gmnoprint img {
	display: block;
	margin: 10px auto;
}
/* End Google Maps Styles */

